# newsrss

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  config.toml.example  package-lock.json  package.json  pyproject.toml  settings.toml.example  tailwind.config.js
.cursor/rules/: devops.mdc  fastapi.mdc  myapp.mdc
.github/workflows/: build-and-release.yml  code-quality.yml
home-assistant/: llm-news-blueprint.yaml  llm-news.yaml
newsrss/: main.py
newsrss/api/: home.py  playlist.py
newsrss/core/: config.py  dependencies.py  events.py
newsrss/models/: schemas.py
newsrss/services/: playlist.py  rss.py
newsrss/static/css/tailwind/: tailwind.css
newsrss/static/js/: refresh.js
newsrss/templates/: index.html
