[tool.poetry]
name = "newsrss"
version = "0.1.0"
description = "API for managing RSS feeds and generating m3u playlists"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.104.0"
uvicorn = ">=0.24.0"
dynaconf = ">=3.2.0"
aiohttp = ">=3.9.0"
feedparser = ">=6.0.10"
aiosqlite = ">=0.19.0"
python-multipart = ">=0.0.6"
jinja2 = ">=3.1.2"
python-dotenv = ">=1.0.0"
boto3 = ">=1.28.0"
google-cloud-storage = ">=2.10.0"
pyyaml = ">=6.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.11.0"
isort = ">=5.12.0"
mypy = ">=1.7.0"
pytest = ">=7.4.3"
pytest-cov = ">=4.1.0"
pytest-asyncio = ">=0.21.1"
pre-commit = ">=3.5.0"
ruff = ">=0.0.272"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["fastapi.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["newsrss"]
omit = ["tests/*"]
